--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"express-ip": "^1.0.4",
 		"handlebars": "^4.7.6",
 		"lint": "^0.7.0",
-		"nodemailer": "^6.4.13"
+		"express": "^4.17.1",
+		"node-fetch": "^2.6.0"
 	}
 }
