--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"nodemon": "^1.19.4"
 	},
 	"dependencies": {
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-handlebars": "^5.1.0",
 		"express-ip": "^1.0.4",
