--- a/package.json
+++ b/package.json
@@ -13,22 +13,15 @@
 	"author": "School of applied technology",
 	"license": "ISC",
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^3.7.0",
-		"@typescript-eslint/parser": "^3.7.0",
-		"eslint": "^7.5.0",
-		"express": "^4.17.1",
-		"node-fetch": "^2.6.0",
-		"spin.js": "^4.1.0",
-		"nodemon": "^1.19.4"
 	},
 	"dependencies": {
+		"express": "^4.17.1",
+		"node-fetch": "^2.6.0",
+		"nodemon": "^1.19.4",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-handlebars": "^5.1.0",
 		"express-ip": "^1.0.4",
 		"handlebars": "^4.7.6",
-		"lint": "^0.7.0",
-		"node-fetch": "^2.6.0",
-		"spin.js": "^4.1.0"
 	}
 }
